<!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) Open Application Platform Authors
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <packaging>pom</packaging>
    <groupId>oap</groupId>
    <artifactId>oap</artifactId>
    <version>1.12.11</version>

    <name>oap</name>

    <prerequisites>
        <maven>3.1</maven>
    </prerequisites>

    <modules>
        <module>oap-stdlib</module>
        <module>oap-metrics</module>
        <module>oap-json</module>
        <module>oap-dictionary</module>
        <module>oap-json-schema</module>
        <module>oap-cli</module>
        <module>oap-http</module>
        <module>oap-ws</module>
        <module>oap-application</module>
        <module>oap-storage</module>
        <module>oap-etl</module>
        <module>oap-logstream</module>
        <module>oap-maven</module>
        <module>oap-ws-cat</module>
        <module>oap-alert</module>
        <module>oap-alert-slack</module>
    </modules>

    <repositories>
        <repository>
            <id>jitpack</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>oap</id>
            <url>http://mvn.oaplatform.org/artifactory/oap/</url>
        </repository>
    </repositories>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>

        <encoding>UTF-8</encoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>

        <testng.version>6.9.9</testng.version>
        <assertj.version>3.3.0</assertj.version>
        <guava.version>18.0</guava.version>
        <logback.version>1.1.3</logback.version>
        <slf4j.version>1.7.13</slf4j.version>
        <httpcomponents.version>4.4.4</httpcomponents.version>
        <compress.version>1.10</compress.version>
        <joda.version>2.9.3</joda.version>
        <metrics.version>3.1.2</metrics.version>
        <jackson.version>2.7.1</jackson.version>
        <lombok.version>1.16.6</lombok.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <useIncrementalCompilation>true</useIncrementalCompilation>
                    <compilerArgs>
                        <arg>-parameters</arg>
                        <arg>-Xlint:unchecked</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.18.1</version>
                <configuration>
                    <argLine>
                        -ea -Xmx1000m -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled
                        -Dlogback.configurationFile=${session.executionRootDirectory}/oap-stdlib/src/test/resources/logback-test.xml
                    </argLine>
                    <testFailureIgnore>true</testFailureIgnore>
                    <useFile>true</useFile>
                    <disableXmlReport>false</disableXmlReport>
                    <printSummary>true</printSummary>
                    <forkedProcessTimeoutInSeconds>4800</forkedProcessTimeoutInSeconds>
                    <!--<forkMode>once</forkMode>-->
                    <useSystemClassLoader>false</useSystemClassLoader>
                    <runOrder>balanced</runOrder>
                    <includes>
                        <include>**/*Test.*</include>
                        <include>**/*TestCase.*</include>
                        <include>**/*Suite.*</include>
                    </includes>
                    <excludedGroups>PERFORMANCE</excludedGroups>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <version>2.4</version>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>PERFORMANCE</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>2.19</version>
                        <configuration>
                            <argLine>
                                -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -Xmx6G
                                -Dlogback.configurationFile=${session.executionRootDirectory}/oap-stdlib/src/test/resources/logback-perf.xml
                            </argLine>
                            <testFailureIgnore>true</testFailureIgnore>
                            <useFile>true</useFile>
                            <disableXmlReport>false</disableXmlReport>
                            <printSummary>true</printSummary>
                            <forkedProcessTimeoutInSeconds>9600</forkedProcessTimeoutInSeconds>
                            <forkMode>once</forkMode>
                            <useSystemClassLoader>false</useSystemClassLoader>
                            <runOrder>balanced</runOrder>
                            <includes>
                                <include>**/*Performance.*</include>
                            </includes>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
